Fixed validator errors added comments

--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
  <title>Home Page</title>
  <link rel= "stylesheet" type="text/css" href= "style.css" />
   </head>
-  <body>
-  <div id= "container">
-      <div class= "header">
-          <header><h3>ART & Literature</h3></header>
-	  </div>
-	    <div class="nav">
-          <nav>
-          <div class="nav">
+    <body>
+      <header class= "header">
+          <h3>ART & Literature</h3>
+          </header>
+	  <!-- end of header -->
+	    <nav class= "nav">
+        <nav>
 		  <ul>
           <li>Home Page</li>
           </ul>
@@ -27,10 +26,11 @@
        <li><a href="project-1-resume.html">Resume Portfolio</a></li>
       </ul>
       </nav>
-      </div>
-   <div class="main">
+    </nav>
+    <!-- end of container -->
+   <div class="main" >
  <h1><strong>Chicago's Art Culture</strong></h1>
- <p>The ever-growing Chicago art scence is fun, inviting and often times free, to Chicago residents or on specific annual free days. There's an array of art venues, galleries,pilsen community art-walks, art musuems and numerous other venues spread acorss the Chicago area.</P>
+ <p>The ever-growing Chicago art scence is fun, inviting and often times free, to Chicago residents or on specific annual free days. There's an array of art venues, galleries,pilsen community art-walks, art musuems and numerous other venues spread acorss the Chicago area.</p>
    <h1>The Musuem of Contemporary Art Chicago</h1>
      <p>-Also known as MCA Chicago</p>
       
@@ -43,9 +43,10 @@
    <h2><strong>Andy Warhol</strong></h2>
    <p></p>
       </div>
+        </div>
    <br>
    <div class= "closing">
-   <h3>Upcoming Exhibits for MCA chicago</em></h3>
+   <h3>Upcoming Exhibits for MCA chicago</h3>
     <ul> 
       <li></li>
       <li></li>
@@ -68,13 +69,12 @@
 	  <li></li>
 	  <li></li>
 	  <li></li>
-  
+    </ul>
   <!--this is where ill have a full length line to seperate and below images of the artist in topic-->
-   </div>  
-  
-   <div id= "footer">
+   <!-- end of closing of page-->
+  <div id= "footer">
    <footer>&copy;Jasmine Hawkins</footer>
    </div>
    </div>
- </body>
+  </body>
 </html>
