--- a/project-1-resume.html
+++ b/project-1-resume.html
@@ -3,7 +3,8 @@
   <head>
   <meta charset= "utf-8">
     <title>Resume</title>
-  </head>
+    <link rel= "stylesheet" type="text/css" href= "style.css" />
+ </head>
     <body>
       <nav>
         <ul>
