--- a/books1.html
+++ b/books1.html
@@ -3,6 +3,7 @@
  <head>
   <meta charset= "utf-8"> 
   <title>Favorite Books</title>
+  <link rel= "stylesheet" type="text/css" href= "style.css" />
   </head>
     <body>
       <nav>
